# paca-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mcp.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: configuration.md  webhooks.md
src/paca_agent/: __init__.py  __main__.py  app.py  config.py  models.py
src/paca_agent/agent/: __init__.py  dispatcher.py  loader.py  prompts.py  runner.py  tools.py
src/paca_agent/agents/: business-analyst.md  developer.md  planner.md  tester.md
src/paca_agent/listeners/: __init__.py  base.py  pull.py  push.py
src/paca_agent/utils/: logging.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py
tests/test_agent/: test_dispatcher.py  test_loader.py  test_prompts.py
tests/test_listeners/: test_pull.py  test_push.py
tests/test_platforms/: test_clickup.py  test_jira.py  test_paca.py
