[project]
name = "paca-agent"
version = "0.1.0"
description = "AI agent for automated task completion across project management platforms"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "paca-agent contributors" }
]
keywords = [
    "ai-agent",
    "task-management",
    "openai",
    "openhands",
    "jira",
    "trello",
    "clickup",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.11"
dependencies = [
    "openhands-ai>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "anyio>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.1",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "faker>=33.0.0",
]

[project.urls]
Homepage = "https://github.com/paca-dev/paca-agent"
Documentation = "https://github.com/paca-dev/paca-agent/blob/main/README.md"
Repository = "https://github.com/paca-dev/paca-agent"
Issues = "https://github.com/paca-dev/paca-agent/issues"

[project.scripts]
paca-agent = "paca_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paca_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["paca_agent"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/paca_agent --cov-report=term-missing"

[tool.coverage.run]
source = ["src/paca_agent"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
